syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.optionals";
option java_outer_classname = "OptionalsProto";

package optionals;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  optional int32 age = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
